Fix spacing on contact form

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -364,6 +364,10 @@ blockquote {
   }
 }
 
+.wpcf7 br {
+  display: none !important;
+}
+
 // Comments
 #comments {
   line-height: 1.4; // Comment body
